Increase contrast and other small style fixes

--- a/app/assets/stylesheets/_accordion.sass
+++ b/app/assets/stylesheets/_accordion.sass
@@ -88,19 +88,19 @@
           font: normal normal normal 14px/1 FontAwesome
           content: "\f054"
           font-size: 11px
-          color: #666
+          color: #333
           font-weight: 10
           margin-top: 10px
+          transition: transform 0.5s
         &.selected:after
           transform: rotate(90deg)
-          transform-origin: 4px 6px
-          transition: transform 0.5s
+          transform-origin: 3px 6px
         a
           font-size: 14px
           line-height: 30px
           height: 30px
           margin: 0 0 2px
-          color: #374d5c
+          color: #333
           text-decoration: none
           padding: 0 0 0 0.75rem
           text-align: left
@@ -117,6 +117,7 @@
           list-style: none
           overflow: visible
           padding: 0
+          margin-bottom: 1rem
           img.sub_header_image
             float: right
             margin-right: 0px
