--- a/app/assets/stylesheets/_chart.sass
+++ b/app/assets/stylesheets/_chart.sass
@@ -1,6 +1,6 @@
 $chart-header-background-color: #DBEDFE
-$chart-header-title-color: #374d5c
-$chart-header-icon-color: #8895b2
+$chart-header-title-color: #333
+$chart-header-icon-color: #333
 
 .chart_holder
   width: 600px
