--- a/app/assets/stylesheets/_dashboard.sass
+++ b/app/assets/stylesheets/_dashboard.sass
@@ -78,7 +78,7 @@
   position: relative
 
   #dashboard_change
-    background: $landing-grey
+    background: #333
     display: block
     color: #fff
     padding: 0.75rem
