--- a/app/assets/stylesheets/_scenarios.sass
+++ b/app/assets/stylesheets/_scenarios.sass
@@ -287,6 +287,8 @@ table.default
           font-size: 0.875rem
       .sub-row
         display: flex
+        span
+          margin-right: 0.25rem
       .type-tag
         color: $landing-gold
         font-weight: normal
