--- a/app/assets/stylesheets/_sidebar.sass
+++ b/app/assets/stylesheets/_sidebar.sass
@@ -18,13 +18,13 @@ $sidebar-active-bg: #eee
       font: normal normal normal 14px/1 FontAwesome
       content: "\f054"
       font-size: 11px
-      color: #666
+      color: #333
       font-weight: 10
       margin-top: 4px
+      transition: transform 0.5s
     &.active:after
       transform: rotate(90deg)
-      transform-origin: 4px 6px
-      transition: transform 0.5s
+      transform-origin: 3px 6px
   ul
     margin: 0 0 10px 0
     padding: 0
@@ -61,7 +61,7 @@ $sidebar-active-bg: #eee
       a
         float: left
         width: 175px
-        color: black
+        color: #333
         text-decoration: none
         padding: 8px 1rem 8px 1rem
 
