--- a/app/assets/stylesheets/_title.sass
+++ b/app/assets/stylesheets/_title.sass
@@ -10,7 +10,7 @@
   max-width: 1070px
 
   h2
-    color: #000
+    color: #333
     font-size: 21px
     font-weight: bold
     float: left
